fixes bug 163841 "Mozilla hangs in PR_Lock at ptsynch.c:190" r=dougt sr=rpotts