netwerk/cache/src/nsCache.h
@@ -62,21 +62,4 @@ extern nsresult  ClientIDFromCacheKey(const nsACString&  key, char ** result);
 extern nsresult  ClientKeyFromCacheKey(const nsACString& key, char ** result);
 
 
-class nsCacheLock : public nsISupports {
-public:
-
-    NS_DECL_ISUPPORTS
-    NS_DEFINE_STATIC_IID_ACCESSOR(NS_ISUPPORTS_IID)
-    
-                nsCacheLock();
-    virtual    ~nsCacheLock();
-    
-    static nsCacheLock * Create();
-    PRLock *    GetPRLock() { return mLock; }
-
-private:
-    PRLock *    mLock;
-};
-
-
 #endif // _nsCache_h
